implement PlasmoAP functionality Hydrophobicity plot missing, but all other parts functioning refs #30670
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@93594 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/build.xml
+++ b/build.xml
@@ -127,6 +127,7 @@
       <property name="project" value="ApiCommonWebsite"/>
       <property name="component" value="Site"/>
     </ant>
+    <mkdir dir="${htdocsTargetDir}/plasmoap/tmp"/>
   </target>
 
   <target name="ApiCommonWebsite/View-Installation" depends="ApiCommonWebsite/Model-Installation">
