--- a/build.xml
+++ b/build.xml
@@ -128,6 +128,7 @@
       <property name="component" value="Site"/>
     </ant>
     <mkdir dir="${htdocsTargetDir}/plasmoap/tmp"/>
+    <chmod dir="${htdocsTargetDir}/plasmoap/tmp" perm="ugo+rwx"/>
   </target>
 
   <target name="ApiCommonWebsite/View-Installation" depends="ApiCommonWebsite/Model-Installation">
