--- a/build.xml
+++ b/build.xml
@@ -6,6 +6,7 @@
 
   <import file="${projectsDir}/EbrcWebSvcCommon/build.xml" />
   <import file="${projectsDir}/GBrowse/build.xml" />
+  <import file="${projectsDir}/JBrowse/build.xml" />
   <import file="${projectsDir}/ApiCommonModel/build.xml" />
 
 
@@ -15,9 +16,11 @@
 
   <target name="ApiCommonWebsite-ChildCheckout">
     <available file="${projectsDir}/GBrowse" type="dir" property="GBrowse.present" />
+    <available file="${projectsDir}/JBrowse" type="dir" property="JBrowse.present" />
     <available file="${projectsDir}/EbrcWebSvcCommon" type="dir"  property="EbrcWebSvcCommon.present" />
     <available file="${projectsDir}/ApiCommonModel" type="dir"  property="ApiCommonModel.present" />
     <antcall target="GBrowse-Checkout"/>
+    <antcall target="JBrowse-Checkout"/>
     <antcall target="EbrcWebSvcCommon-Checkout"/>
     <antcall target="ApiCommonModel-Checkout"/>
   </target>
@@ -27,6 +30,14 @@
     <ant target="defaultProjectCheckout" inheritAll="false">
       <property name="svnurl" value="https://cbilsvn.pmacs.upenn.edu/svn/apidb/GBrowse"/>
       <property name="project" value="GBrowse"/>
+      <property name="version" value="??"/>
+    </ant>
+  </target>
+
+  <target name="JBrowse-Checkout" unless="JBrowse.present">
+    <ant target="defaultProjectCheckout" inheritAll="false">
+      <property name="svnurl" value="https://cbilsvn.pmacs.upenn.edu/svn/apidb/JBrowse"/>
+      <property name="project" value="JBrowse"/>
       <property name="version" value="??"/>
     </ant>
   </target>
@@ -58,6 +69,9 @@
       <property name="project" value="GBrowse"/>
     </ant>
     <ant target="defaultProjectUpdate">
+      <property name="project" value="JBrowse"/>
+    </ant>
+    <ant target="defaultProjectUpdate">
       <property name="project" value="EbrcWebSvcCommon"/>
     </ant>
      <ant target="defaultProjectUpdate">
@@ -73,6 +87,7 @@
  <target name="ApiCommonWebsite-Installation" depends="EbrcWebSvcCommon-Installation,
                                                        ApiCommonModel-Installation,
                                                        GBrowse-Installation,
+                                                       JBrowse-Installation,
  	                                                     ApiCommonWebsite-MavenInstallation,
                                                        ApiCommonWebsite/Model-Installation,
                                                        ApiCommonWebsite/View-Installation,
@@ -157,6 +172,7 @@
 -->
   <target name="ApiCommonWebsite-WebInstallation" depends="EbrcWebSvcCommon-WebInstallation,
                                                            GBrowse-WebInstallation,
+                                                           JBrowse-WebInstallation,
                                                            ApiCommonWebsite-Installation,
                                                            ApiCommonWebsite/View-WebInstallation,
                                                            ApiCommonWebsite/Site-WebInstallation">
