--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -38,7 +38,7 @@
       <groupId>org.eupathdb</groupId>
       <artifactId>api-common-website-model</artifactId>
     </dependency>
-    
+
     <dependency>
       <groupId>org.eupathdb</groupId>
       <artifactId>api-common-model-model</artifactId>
@@ -58,6 +58,18 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
     </dependency>
 
     <dependency>
