--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/EuPathDB.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/EuPathDB.yml
@@ -1,18 +1,17 @@
 # $SourceFileURL$
 ---
-_self_url_scheme: https
 
 # Given hostname == a1.eupathdb.org, swap_sld('amoebadb.org')
 # returns 'a1.amoebadb.org'. swap_hostname(_host_frontends) returns
 # 'alpha.amoebadb.org'.
 projectsxml:
-  AmoebaDB: "http://{{ hostname|swap_sld('amoebadb.org')|swap_hostname(_host_frontends) }}/amoeba/"
-  CryptoDB: "http://{{ hostname|swap_sld('cryptodb.org')|swap_hostname(_host_frontends) }}/cryptodb/"
-  FungiDB: "http://{{ hostname|swap_sld('fungidb.org')|swap_hostname(_host_frontends) }}/fungidb/"
-  GiardiaDB: "http://{{ hostname|swap_sld('giardiadb.org')|swap_hostname(_host_frontends) }}/giardiadb/"
-  MicrosporidiaDB: "http://{{ hostname|swap_sld('microsporidiadb.org')|swap_hostname(_host_frontends) }}/micro/"
-  PiroplasmaDB: "http://{{ hostname|swap_sld('piroplasmadb.org')|swap_hostname(_host_frontends) }}/piro/"
-  PlasmoDB: "http://{{ hostname|swap_sld('plasmodb.org')|swap_hostname(_host_frontends) }}/plasmo/"
-  ToxoDB: "http://{{ hostname|swap_sld('toxodb.org')|swap_hostname(_host_frontends) }}/toxo/"
-  TrichDB: "http://{{ hostname|swap_sld('trichdb.org')|swap_hostname(_host_frontends) }}/trichdb/"
-  TriTrypDB: "http://{{ hostname|swap_sld('tritrypdb.org')|swap_hostname(_host_frontends) }}/tritrypdb/"
+  AmoebaDB: "https://{{ hostname|swap_sld('amoebadb.org')|swap_hostname(_host_frontends) }}/amoeba/"
+  CryptoDB: "https://{{ hostname|swap_sld('cryptodb.org')|swap_hostname(_host_frontends) }}/cryptodb/"
+  FungiDB: "https://{{ hostname|swap_sld('fungidb.org')|swap_hostname(_host_frontends) }}/fungidb/"
+  GiardiaDB: "https://{{ hostname|swap_sld('giardiadb.org')|swap_hostname(_host_frontends) }}/giardiadb/"
+  MicrosporidiaDB: "https://{{ hostname|swap_sld('microsporidiadb.org')|swap_hostname(_host_frontends) }}/micro/"
+  PiroplasmaDB: "https://{{ hostname|swap_sld('piroplasmadb.org')|swap_hostname(_host_frontends) }}/piro/"
+  PlasmoDB: "https://{{ hostname|swap_sld('plasmodb.org')|swap_hostname(_host_frontends) }}/plasmo/"
+  ToxoDB: "https://{{ hostname|swap_sld('toxodb.org')|swap_hostname(_host_frontends) }}/toxo/"
+  TrichDB: "https://{{ hostname|swap_sld('trichdb.org')|swap_hostname(_host_frontends) }}/trichdb/"
+  TriTrypDB: "https://{{ hostname|swap_sld('tritrypdb.org')|swap_hostname(_host_frontends) }}/tritrypdb/"
