--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/templates.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/templates.yml
@@ -38,3 +38,6 @@ rebuilder.conf:
 geneListComparison-config:
   src: 'ApiCommonWebsite/geneListComparison-config.xml.j2'
   dest: '{{ gus_home }}/config//geneListComparison-config.xml'
+fisherExactTest-config:
+  src: 'ApiCommonWebsite/fisherExactTest-config.xml.j2'
+  dest: '{{ gus_home }}/config//fisherExactTest-config.xml'
