move api specific jbrowse files to apicommonmodel
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@96321 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/build.xml
+++ b/build.xml
@@ -192,8 +192,12 @@
     <!--JBrowse stuff -->
     <delete file="${webappTargetDir}/jbrowse/jbrowse.conf"/>
     <delete file="${webappTargetDir}/jbrowse/functions.conf"/>
+    <delete file="${webappTargetDir}/jbrowse/index.html"/>
+    <delete dir="${webappTargetDir}/jbrowse/node_modules"/>
     <copy file="${projectsDir}/ApiCommonModel/Model/lib/jbrowse/jbrowse.conf" tofile="${webappTargetDir}/jbrowse/jbrowse.conf"/>
     <copy file="${projectsDir}/ApiCommonModel/Model/lib/jbrowse/functions.conf" tofile="${webappTargetDir}/jbrowse/functions.conf"/>
+    <copy file="${projectsDir}/JBrowse/Site/htdocs/index.html" tofile="${webappTargetDir}/jbrowse/index.html"/>
+    <copy file="${projectsDir}/JBrowse/Site/htdocs/apiJBrowse.js" tofile="${webappTargetDir}/jbrowse/apiJBrowse.js"/>
 
 
 
