changes to try to get basic pages working
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/branches/strategy-loading@96831 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/WEB-INF/web.xml
+++ b/Site/webapp/WEB-INF/web.xml
@@ -189,10 +189,10 @@
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
 
-  <!-- Error Page Mappings -->
+  <!-- Error Page Mappings 
   <error-page>
     <exception-type>java.lang.Exception</exception-type>
     <location>/wdkCustomization/jsp/Error.jsp</location>
-  </error-page>
+  </error-page>-->
 
 </web-app>
