--- a/build.xml
+++ b/build.xml
@@ -178,6 +178,7 @@
                                                            ApiCommonWebsite/Site-WebInstallation">
     <!-- JBrowse Stuff -->
     <symlink link="${webappTargetDir}/jbrowse/tracks" resource="${targetDir}/lib/jbrowse/auto_generated"/>
+    <symlink link="${webappTargetDir}/jbrowse/common_tracks" resource="${targetDir}/lib/jbrowse/common"/>
 
   </target>
 
