--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/templates.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/templates.yml
@@ -41,3 +41,6 @@ geneListComparison-config:
 fisherExactTest-config:
   src: 'ApiCommonWebsite/fisherExactTest-config.xml.j2'
   dest: '{{ gus_home }}/config//fisherExactTest-config.xml'
+robots.txt:
+  src: 'ApiCommonWebsite/robots.txt.j2'
+  dest: '{{ gus_home }}/../html//robots.txt'
