--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/templates.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/templates.yml
@@ -44,3 +44,6 @@ fisherExactTest-config:
 robots.txt:
   src: 'ApiCommonWebsite/robots.txt.j2'
   dest: '{{ gus_home }}/../html//robots.txt'
+sitemap.txt:
+  src: 'ApiCommonWebsite/sitemap.txt.j2'
+  dest: '{{ gus_home }}/../html//sitemap.txt'
