fix incorrect regex
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@98121 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
@@ -79,5 +79,5 @@ fisherexacttestconfig_connectionUrl: "{{ '' if modelconfig_userDb_connectionUrl.
 
 # below will remove the wN. prefix from live sites.  This is used for
 # creating link references for robots.txt / sitemap.txt for live sites.
-live_hostname: "{{ hostname | regex_replace('^w[0-9]','') }}"
+live_hostname: "{{ hostname | regex_replace('^w[0-9]\\.','') }}"
 
