Add default fetch size as a DB config param in comment config
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@98421 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
@@ -43,6 +43,7 @@ commentconfig_maxActive: 20
 commentconfig_maxIdle: 1
 commentconfig_minIdle: 1
 commentconfig_maxWait: 50
+commentconfig_defaultFetchSize: 200
 commentconfig_commentSchema: userlogins5
 commentconfig_userLoginSchema: userlogins5
 commentconfig_userLoginDbLink: '{{ modelconfig_appDb_userDbLink }}'
