--- a/build.xml
+++ b/build.xml
@@ -86,9 +86,7 @@
 
  <target name="ApiCommonWebsite-Installation" depends="EbrcWebSvcCommon-Installation,
                                                        ApiCommonModel-Installation,
-                                                       GBrowse-Installation,
-                                                       JBrowse-Installation,
- 	                                                     ApiCommonWebsite-MavenInstallation,
+ 	                                               ApiCommonWebsite-MavenInstallation,
                                                        ApiCommonWebsite/Model-Installation,
                                                        ApiCommonWebsite/View-Installation,
                                                        ApiCommonWebsite/Site-Installation,
@@ -171,14 +169,13 @@
  </target>
 -->
   <target name="ApiCommonWebsite-WebInstallation" depends="EbrcWebSvcCommon-WebInstallation,
-                                                           GBrowse-WebInstallation,
-                                                           JBrowse-WebInstallation,
                                                            ApiCommonWebsite-Installation,
                                                            ApiCommonWebsite/View-WebInstallation,
                                                            ApiCommonWebsite/Site-WebInstallation">
-    <!-- JBrowse Stuff -->
+    <!-- JBrowse Stuff
     <symlink link="${webappTargetDir}/jbrowse/tracks" resource="${targetDir}/lib/jbrowse/auto_generated"/>
     <symlink link="${webappTargetDir}/jbrowse/common_tracks" resource="${targetDir}/lib/jbrowse/common"/>
+    -->
 
   </target>
 
@@ -190,7 +187,7 @@
       <property name="component" value="Site"/>
     </ant>
 
-    <!--JBrowse stuff -->
+    <!--JBrowse stuff
     <delete file="${webappTargetDir}/jbrowse/jbrowse.conf"/>
     <delete file="${webappTargetDir}/jbrowse/functions.conf"/>
     <delete file="${webappTargetDir}/jbrowse/index.html"/>
@@ -199,8 +196,7 @@
     <copy file="${projectsDir}/ApiCommonModel/Model/lib/jbrowse/functions.conf" tofile="${webappTargetDir}/jbrowse/functions.conf"/>
     <copy file="${projectsDir}/ApiCommonModel/Model/lib/jbrowse/index.html" tofile="${webappTargetDir}/jbrowse/index.html"/>
     <copy file="${projectsDir}/ApiCommonModel/Model/lib/jbrowse/apiJBrowse.js" tofile="${webappTargetDir}/jbrowse/apiJBrowse.js"/>
-
-
+    -->
 
     <!-- replacement for dataPlotter file used to do expression graph -->
     <replace file="${cgibinTargetDir}/dataPlotter.pl" 
@@ -266,4 +262,3 @@
   </target>  
 
 </project>
-
