--- a/Site/webapp/WEB-INF/web.xml
+++ b/Site/webapp/WEB-INF/web.xml
@@ -56,6 +56,7 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+
   <!-- UrlRewrite filter -->
   <!-- This is used in conjuction with the asset fingerprinting utilities in EbrcWebsiteCommon.
        We also set some cache-related headers here (see /WEB-INF/urlrewrite.xml). -->
@@ -68,6 +69,16 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   <!-- End UrlRewrite filter -->
+
+  <!-- Replace /-PROJECT-/ in the request URL with the WDK Project ID -->
+  <filter>
+    <filter-name>ProjectIdMacroFilter</filter-name>
+    <filter-class>org.eupathdb.common.controller.ProjectIdMacroFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>ProjectIdMacroFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 
   <filter>
     <filter-name>CheckLoginFilter</filter-name>
