--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
@@ -25,6 +25,7 @@ modelprop:
   COMMENT_SCHEMA: '{{ commentconfig_commentSchema }}.'
   FACEBOOK_URL: https://facebook.com/pages/EuPathDB/133123003429972
   GOOGLE_ANALYTICS_ID: none
+  COMMUNITY_SITE: //qa.community.eupathdb.org/
   LEGACY_WEBAPP_BASE_URL: "/{{ webapp_ctx }}"
   PROJECT_ID: '{{ project }}'
   STEP_ANALYSIS_JOB_DIR: '{{ _wdkStepAnalysisJobsDir }}'
