--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
@@ -7,6 +7,7 @@ modelconfig_adminEmail:
   - "{{ 'rdoherty$upenn.edu'|replace('$', '@') }}"
   - "{{ 'sfischer$pcbi.upenn.edu'|replace('$', '@') }}"
   - "{{ 'jtlong$upenn.edu'|replace('$', '@') }}"
+  - "{{ 'robert.belnap$uga.edu'|replace('$', '@') }}"
 
 modelconfig_appDb_maxIdle: 10
 modelconfig_appDb_maxActive: 40
@@ -19,6 +20,14 @@ modelprop:
   )
 }}"
   GOOGLE_MAPS_API_KEY: "{{ lookup('euparc', 'attr=api_key xpath=sites/google_maps default=NOKEY') }}"
+  COMMUNITY_SITE: "//{{ community_env_map[prefix]|default(community_env_map['default']) }}"
+
+# the below extends the w_ q_ prefix pattern used for workspace_env_map, which
+# really feels like a bad idea.  please don't let this cancer spread.  Find a
+# generalized way to do this in the future... 
+community_env_map:
+  w_prefix: community.eupathdb.org/
+  default: qa.community.eupathdb.org/
 
 # this mapping allow different configs based on hostname.  Mainly used to give
 # different configs to qN.sitedb.org sites, it could be extended to others
