--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/templates.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/templates.yml
@@ -37,13 +37,17 @@ rebuilder.conf:
   dest: '{{ gus_home }}/config/rebuilder.conf'
 geneListComparison-config:
   src: 'ApiCommonWebsite/geneListComparison-config.xml.j2'
-  dest: '{{ gus_home }}/config//geneListComparison-config.xml'
+  dest: '{{ gus_home }}/config/geneListComparison-config.xml'
 fisherExactTest-config:
   src: 'ApiCommonWebsite/fisherExactTest-config.xml.j2'
-  dest: '{{ gus_home }}/config//fisherExactTest-config.xml'
+  dest: '{{ gus_home }}/config/fisherExactTest-config.xml'
 robots.txt:
   src: 'ApiCommonWebsite/robots.txt.j2'
-  dest: '{{ gus_home }}/../html//robots.txt'
+  dest: '{{ gus_home }}/../html/robots.txt'
 sitemap.txt:
   src: 'ApiCommonWebsite/sitemap.txt.j2'
-  dest: '{{ gus_home }}/../html//sitemap.txt'
+  dest: '{{ gus_home }}/../html/sitemap.txt'
+sitemap.xml:
+  src: 'ApiCommonWebsite/sitemap.xml.j2'
+  dest: '{{ gus_home}}/../html/sitemap.xml'
+  
