--- a/Model/pom.xml
+++ b/Model/pom.xml
@@ -26,6 +26,11 @@
 
     <dependency>
       <groupId>org.gusdb</groupId>
+      <artifactId>fgputil-server</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.gusdb</groupId>
       <artifactId>wdk-model</artifactId>
     </dependency>
 
