--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
@@ -28,7 +28,7 @@ modelprop:
   LEGACY_WEBAPP_BASE_URL: "/{{ webapp_ctx }}"
   PROJECT_ID: '{{ project }}'
   STEP_ANALYSIS_JOB_DIR: '{{ _wdkStepAnalysisJobsDir }}'
-  TWITTER_URL: https://twitter.com/EuPathDB
+  TWITTER_URL: https://twitter.com/VEuPathDB
   TWITTER_WIDGET_ID: 344817818073714691
   USE_LEGACY_RECORD_PAGE: 'false'
   WEBAPP_BASE_URL: "/{{ webapp_ctx }}/app"
