Move comment updater from SiteSearchData project

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <module>Model</module>
     <module>Site</module>
     <module>Service</module>
+    <module>CommentUpdater</module>
     <module>Test</module>
   </modules>
 
