--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,8 @@
                                                        ApiCommonWebsite/Model-Installation,
                                                        ApiCommonWebsite/View-Installation,
                                                        ApiCommonWebsite/Site-Installation,
-                                                       ApiCommonWebsite/Service-Installation">
+                                                       ApiCommonWebsite/Service-Installation,
+  	                                                   ApiCommonWebsite/CommentUpdater-Installation">
 
     <ant target="defaultProjectInstall">
       <property name="project" value="ApiCommonWebsite" />
@@ -93,6 +94,12 @@
     </ant>
   </target>
 
+  <target name="ApiCommonWebsite/CommentUpdater-Installation">
+    <ant target="defaultComponentInstall">
+      <property name="project" value="ApiCommonWebsite" />
+      <property name="component" value="CommentUpdater" />
+    </ant>
+  </target>
 
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
   <!-- oooooooooooooooooooooooo  Web Installation  oooooooooooooooooooooooo -->
