--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/FungiDB.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/FungiDB.yml
@@ -1,6 +1,6 @@
 # $SourceFileURL$
 ---
 modelprop:
-  TWITTER_WIDGET_ID: 479835314844758017
-  TWITTER_URL: https://twitter.com/FungiDB
+  TWITTER_URL_2: https://twitter.com/FungiDB
+  TWITTER_WIDGET_ID_2: 479835314844758017
   FACEBOOK_URL: https://facebook.com/pages/FungiDB/169472636469487
