--- a/Site/webapp/WEB-INF/web.xml
+++ b/Site/webapp/WEB-INF/web.xml
@@ -125,7 +125,7 @@
   <!-- WDK RESTful client filter -->
   <servlet>
     <servlet-name>WDKClient</servlet-name>
-    <jsp-file>/WEB-INF/includes/client/index.jsp</jsp-file>
+    <jsp-file>/WEB-INF/includes/client.html</jsp-file>
   </servlet>
   <servlet-mapping>
     <servlet-name>WDKClient</servlet-name>
@@ -170,12 +170,17 @@
   </welcome-file-list>
 
   <!-- Error Page Mappings -->
-  <!--
   <error-page>
-    <exception-type>java.lang.Exception</exception-type>
-    <location>/wdkCustomization/jsp/Error.jsp</location>
+    <error-code>401</error-code>
+    <location>/401.html</location>
   </error-page>
-  -->
+  <error-page>
+    <error-code>404</error-code>
+    <location>/404.html</location>
+  </error-page>
+  <error-page>
+    <location>/500.html</location>
+  </error-page>
 
 </web-app>
 
