--- a/Model/pom.xml
+++ b/Model/pom.xml
@@ -45,6 +45,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.eupathdb</groupId>
+      <artifactId>api-common-website-commentupdater</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>com.thaiopensource</groupId>
       <artifactId>jing</artifactId>
     </dependency>
