--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/EuPathDB.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/EuPathDB.yml
@@ -9,9 +9,12 @@ projectsxml:
   CryptoDB: "https://{{ hostname|swap_sld('cryptodb.org')|swap_hostname(_host_frontends) }}/cryptodb/"
   FungiDB: "https://{{ hostname|swap_sld('fungidb.org')|swap_hostname(_host_frontends) }}/fungidb/"
   GiardiaDB: "https://{{ hostname|swap_sld('giardiadb.org')|swap_hostname(_host_frontends) }}/giardiadb/"
+  HostDB: "https://{{ hostname|swap_sld('hostdb.org')|swap_hostname(_host_frontends) }}/hostdb/"
   MicrosporidiaDB: "https://{{ hostname|swap_sld('microsporidiadb.org')|swap_hostname(_host_frontends) }}/micro/"
   PiroplasmaDB: "https://{{ hostname|swap_sld('piroplasmadb.org')|swap_hostname(_host_frontends) }}/piro/"
   PlasmoDB: "https://{{ hostname|swap_sld('plasmodb.org')|swap_hostname(_host_frontends) }}/plasmo/"
   ToxoDB: "https://{{ hostname|swap_sld('toxodb.org')|swap_hostname(_host_frontends) }}/toxo/"
   TrichDB: "https://{{ hostname|swap_sld('trichdb.org')|swap_hostname(_host_frontends) }}/trichdb/"
   TriTrypDB: "https://{{ hostname|swap_sld('tritrypdb.org')|swap_hostname(_host_frontends) }}/tritrypdb/"
+  VectorBase: "https://{{ hostname|swap_sld('vectorbase.org')|swap_hostname(_host_frontends) }}/vectorbase/"
+
