--- a/Site/webapp/WEB-INF/web.xml
+++ b/Site/webapp/WEB-INF/web.xml
@@ -54,6 +54,20 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <filter>
+    <filter-name>BetaLegacyFilter</filter-name>
+    <filter-class>org.eupathdb.common.controller.BetaLegacyFilter</filter-class>
+    <init-param>
+      <param-name>beta</param-name>
+      <!-- switch to false if in the prod branch -->
+      <param-value>true</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>BetaLegacyFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
   <!-- Replace /-PROJECT-/ in the request URL with the WDK Project ID -->
   <filter>
     <filter-name>ProjectIdMacroFilter</filter-name>
